--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html> 
+<body>
 
+<h1 class="text-center ">Personal Portfolio Page
+<h2 class="text-center">Emme Oborne
+</h2> 
+</h1>
+<h3 class="text-left">About Me:
+  <p>I am currently a senior at Vashon Island Highschool, I play soccer and Tennis.
+  I am also a member of ASB executive board as the secretary. On my free time I enjoy hanging out with my friends, spoiling my cats, eating,
+  coding, and sleeping. 
+  </p>
+  </h3>
+  
