--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,9 @@
 <html> 
 <body>
 
-<h1 class="text-center">Personal Portfolio Page
+<h1 class="text-center">
+  <p><font face="verdana" size="15" color="pink">Personal Portfolio Page</font></p>
+
 <h2 class="text-center">Emme Oborne
 </h2> 
 </h1>
