--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html> 
 <body>
-
+<div class="contanier"></div>
+<div class="jumbotron"></div>
+<div class="row"></div>
 <h1 class="text-center">
   <p><font face="verdana" size="15" color="pink">Personal Portfolio Page</font></p>
 
