--- a/aboutme.html
+++ b/aboutme.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html> 
-<body>
-<div class="contanier"></div>
-<div class="jumbotron"></div>
-<div class="row"></div>
-<h1 class="text-center">
-  <p><font face="verdana" size="15" color="pink">Personal Portfolio Page</font></p>
-
-<h2 class="text-center">Emme Oborne
-</h2> 
+<head>
+<style>
+  div.heading {
+    background-color: pink;
+    color: white;
+    margin: 20px 0 20px 0;
+    padding: 5px
+  }
+  div.headingTwo {
+  	background-color: rgb(200,200,200);
+    color: pink;
+    margin: 10px 0 10px 0;
+    padding: 5px;
+  }
+  
+  </style>
+  </head>
+<div class="heading">
+<center>
+<h1><font face="verdana" size="20">
+Emme Osborne</font>
+</div>
 </h1>
-<h3 class="text-left">About Me:
+</center>
+
+
+  
+<div class="headingTwo">
+<center>
+<h2>Personal Portfolio
+</h2>
+</div>
+</center>
+
+<center>
+<h3 class="text-left">About Me: </center>
   <p>I am currently a senior at Vashon Island Highschool, I play soccer and tennis.
   I am also a member of ASB executive board as the secretary. On my free time I enjoy hanging out with my friends, spoiling my cats, eating,
   coding, and sleeping. 
