--- a/core4.html
+++ b/core4.html
@@ -47,9 +47,10 @@
         <!-- Fill in the row for Variables -->
         <tr>
         <td><b>Variables</b></td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td>A value that can change, depending on conditions or on information passed to the program.</td>
+          <td>A variable is like a labeled box you can put any value into it and it will hold on to it,
+            but you can also change what is inside of the box  </td>
+          <td><div class="thumbnail"><img src= "http://www.pythonbytesize.com/uploads/8/0/6/1/8061221/4778406_orig.jpg"></div>  </td>
           <td>  </td>
         </tr>
 
