--- a/core4.html
+++ b/core4.html
@@ -57,19 +57,20 @@
         <!-- Fill in the row for Loops -->
         <tr>
           <td><b>Loops</b></td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td>A sequence of instruction s that is continually repeated until a certain condition is reached.</td>
+          <td>A dental checkup. There are a finite number of teeth, and the dentist checks each one in turn for cavities and gum disease.</td>
+          <td><div class="thumbnail"><img src= "https://ictinaction.files.wordpress.com/2012/08/python-for-loops.png"></div> </td>
+          <td><div class="thumbnail"><img src= "https://study.cs50.net/slideshows/1emuYCHgcTfTayAe1k-L1cM5Ef5JJgMNq_o6xZqmsu8Y/img/0.png"></div>  </td>
         </tr>
 
         <!-- Fill in the row for Conditionals -->
         <tr>
           <td><b>Conditionals</b></td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td> features of a programming language, which perform different computations or actions
+            depending on whether a programmer-specified boolean condition evaluates to true or false.</td>
+          <td>When I lose a tooth, the tooth fairy comes. </td>
+          <td><div class="thumbnail"><img src= "https://i.stack.imgur.com/zEF1N.png"></div></td>
+          <td><div class="thumbnail"><img src= "http://cs.harvard.edu/malan/scratch/ifelseifelse.gif"></div></td>
         </tr>
 
         <!-- Fill in the row for Functions -->
