--- a/aboutme.html
+++ b/aboutme.html
@@ -44,6 +44,13 @@ Emme Osborne</font>
   visit are Africa, Thailand and Mexico.
   </p>
   </h3>
+  <h4>Fun Fact:</h4>
+  <p>  -I want to have a pet otter one day, or a whole animal sanctuary.
+  -I want to build my own PC
+  -I think snakes are the best cuddlers and I would like to have one as a pet one day
+  -The celbreties I have met are Drake Bell, and Tyler The Creator 
+  -I saw Selena Gomez at the airport on my way home from Cuba
+  </p>
   
-  <h4> <b>Fun Fact:</b> I want to have a pet otter one day, or a whole animal sanctuary.</h4>
+  
   
