--- a/aboutme.html
+++ b/aboutme.html
@@ -44,13 +44,16 @@ Emme Osborne</font>
   visit are Africa, Thailand and Mexico.
   </p>
   </h3>
-  <h4>Fun Fact:</h4>
-  <p>  -I want to have a pet otter one day, or a whole animal sanctuary.
-  -I want to build my own PC
-  -I think snakes are the best cuddlers and I would like to have one as a pet one day
-  -The celbreties I have met are Drake Bell, and Tyler The Creator 
-  -I saw Selena Gomez at the airport on my way home from Cuba
-  </p>
+  
+<h4>Fun Facts:</h4>
+  <ul>
+    <li>I want to have a pet otter one day, or a whole animal sanctuary.</li>
+    <li>I want to build my own PC</li>
+    <li>I think snakes are the best cuddlers and I would like to have one as a pet one day</li>
+    <li>The celbreties I have met are Drake Bell, and Tyler The Creator</li>
+    <li>I saw Selena Gomez at the airport on my way home from Cuba</li>
+  </ul>  
+
   
   
   
