--- a/aboutme.html
+++ b/aboutme.html
@@ -37,13 +37,15 @@ Emme Osborne</font>
 
 <center>
 <h3 class="text-left">About Me: </center>
-  <p>I am currently a senior at Vashon Island Highschool, I play soccer and tennis.
-  I am also a member of ASB executive board as the secretary. On my free time I enjoy hanging out with my friends, music, spoiling my cats, eating,
+  
+  <p> I am currently a senior at Vashon Island Highschool, I play soccer and tennis.
+  I am a member of ASB executive board as the secretary. On my free time I enjoy hanging out with my friends, music, spoiling my cats, eating,
   coding, and sleeping. I was born and raised in West Seattle, I live with my Mom Karen, my dad Ron, and my older sister Anna. My favorite subjects at school 
   are computer science and social studies. I love to travel and so far I've been to Cuba, Spain, Gibralter and Amsterdam. The next places I want to
   visit are Africa, Thailand and Mexico.
   </p>
-  </h3>
+  <img src="cubapic.jpg" alt="Photo of me in Cuba" style="width:304px;height:228px;">
+</h3>
   
 <h4>Fun Facts:</h4>
   <ul>
