--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,7 @@ Emme Osborne</font>
   are computer science and social studies. I love to travel and so far I've been to Cuba, Spain, Gibralter and Amsterdam. The next places I want to
   visit are Africa, Thailand and Mexico.
   </p>
-  <img src="Pictures/cubapic_files/cubapic.jpg" alt="Photo of me in Cuba" style="width:304px;height:228px;">
+  <img src="cubapic_files/cubapic.jpg" alt="Photo of me in Cuba" style="width:304px;height:228px;">
 </h3>
   
 <h4>Fun Facts:</h4>
