--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,8 @@ Emme Osborne</font>
   visit are Africa, Thailand and Mexico.
   </p>
   <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/19665660_819630024855474_2579873201713128570_n.jpg?oh=9900a492ca40883bae84c3afdada8f5c&oe=5A05D96A" alt="Photo of me in Cuba" style="width:480px;height:360px;">
-</h3>
+  <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/19702468_1346744002110697_1971986300318268748_n.jpg?oh=196680e71f424554281cc86727507cde&oe=59F17390" alt="Photo of my friend and I in Spain" style="width:480px;height:360px;"
+  </h3>
   
 <h4>Fun Facts:</h4>
   <ul>
