--- a/aboutme.html
+++ b/aboutme.html
@@ -48,7 +48,13 @@ Emme Osborne</font>
   <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/19702468_1346744002110697_1971986300318268748_n.jpg?oh=196680e71f424554281cc86727507cde&oe=59F17390" alt="Photo of my friend and I in Spain" style="width:480px;height:360px;"
   </h3>
   
-<h4>Fun Facts:</h4>
+  <h4>My Work:</h4>
+    <ul>
+      <li><a href="https://codepen.io/emmeosborne/full/apZgqq/">I wrote my first web page about Michelle Obama</a></li>
+      <li><a href="https://scratch.mit.edu/projects/168695497/">I made a pong game in scratch</a></li>
+  </ul>
+  
+<h5>Fun Facts:</h5>
   <ul>
     <li>I want to have a pet otter one day, or a whole animal sanctuary.</li>
     <li>I want to build my own PC</li>
@@ -56,6 +62,8 @@ Emme Osborne</font>
     <li>The celbreties I have met are Drake Bell, and Tyler The Creator</li>
     <li>I saw Selena Gomez at the airport on my way home from Cuba</li>
   </ul>  
+  
+  
 
   
   
