--- a/aboutme.html
+++ b/aboutme.html
@@ -63,8 +63,8 @@ Emme Osborne</font>
     <li>I saw Selena Gomez at the airport on my way home from Cuba</li>
   </ul>  
   
-  <h6>Contact me:</h6>
-  <ul>
+  
+  <h6>Contact me:</h6><ul>
     <li><a href="https://www.linkedin.com/in/emme-osborne-016504a2/">LinkedIn</a></li>
     <li>Current Work Email: osborne.emme@vashonsd.org</li>
   </ul>
