--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,9 @@ Emme Osborne</font>
 </h2>
 </div>
 </center>
-  <button About Me onclick=></button>
+  <button type="button" id="h3">About me document.getElementById("h3").onclick = function () {
+    window.location.hash = "#navigateHere";
+};</button>
 <center>
 <h3 class="text-left">About Me: </center>
   
